fixed small bugs in review, such as not showing and wrong images displaying

--- a/src/component/Rating/review.css
+++ b/src/component/Rating/review.css
@@ -45,10 +45,12 @@
 }
 
 .review-text {
+    padding-right: 2rem;
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: break-word;
     hyphens: auto;
+
 }
 #go-to-course-img{
     height: 2rem;
